AM_CFLAGS = @XORG_CFLAGS@
radeonhd_drv_la_LTLIBRARIES = radeonhd_drv.la
radeonhd_drv_la_LDFLAGS = -module -avoid-version
radeonhd_drv_ladir = @moduledir@/drivers

radeonhd_drv_la_SOURCES = \
	rhd_atombios.c \
	rhd_cursor.c \
	rhd_dac.c \
	rhd_driver.c \
	rhd_helper.c \
	rhd_id.c \
	rhd_output.c \
	rhd_pll.c \
	rhd.h \
	rhd_atombios.h
	rhd_cursor.h \
	rhd_output.h \
	rhd_pll.h \
	rhd_regs.h
	
