AM_CFLAGS = @XORG_CFLAGS@
radeonhd_drv_la_LTLIBRARIES = radeonhd_drv.la
radeonhd_drv_la_LDFLAGS = -module -avoid-version
radeonhd_drv_ladir = @moduledir@/drivers

radeonhd_drv_la_SOURCES = \
	rhd_i2c.c \
	rhd_crtc.c \
	rhd_connector.c \
	rhd_cursor.c \
	rhd_dac.c \
	rhd_driver.c \
	rhd_helper.c \
	rhd_id.c \
	rhd_lut.c \
	rhd_modes.c \
	rhd_output.c \
	rhd_pll.c \
	rhd_tmds.c \
	rhd_vga.c \
	rhd.h \
	rhd_i2c.h \
	rhd_crtc.h \
	rhd_connector.h \
	rhd_cursor.h \
	rhd_lut.h \
	rhd_modes.h \
	rhd_output.h \
	rhd_pll.h \
	rhd_regs.h \
	rhd_vga.h

